--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hello 123!
-    New test
+   <h1> Hello 123!</h1>
+  <p>New test</p>
 </body>
 </html>
